@@ -42,6 +42,7 @@ Bug fixes
  * Header for search results on the redirects index page now shows the correct count when the listing is paginated (Nick Smith)
  * ``set_url_paths`` management command is now compatible with Django 1.10 (Benjamin Bach)
  * Form builder email notifications now output multiple values correctly (Sævar Öfjörð Magnússon)
+ * Closing 'more' dropdown on explorer no longer jumps to the top of the page (Ducky)
 
 Upgrade considerations
 ======================
